changed images to mockups on landingpage

--- a/users/templates/users/landingpage.html
+++ b/users/templates/users/landingpage.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="hero-image slide-in-right">
-                <img src="{% static 'users/images/hero.jpg' %}" alt="Master Your Interview Skills" class="feature-img">
+                <img src="{% static 'users/images/hero.png' %}" alt="Master Your Interview Skills" class="feature-img">
             </div>
         </section>
 
@@ -80,7 +80,6 @@
                 <div class="feature-row" style="display: flex; flex-direction: row;">
                     <div class="feature-image slide-in-left" style="order: 1;">
                         <img src="{% static 'users/images/technical.png' %}" alt="Technical Interview Feature" class="feature-img">
-                        <div class="gradient-overlay"></div>
                     </div>
                     <div class="feature-content slide-in-right" style="order: 2;">
                         <div class="feature-icon">
@@ -102,7 +101,6 @@
                     </div>
                     <div class="feature-image slide-in-right" style="order: 2;">
                         <img src="{% static 'users/images/behavioral.png' %}" alt="Behavioral Interview Feature" class="feature-img">
-                        <div class="gradient-overlay" style="background: linear-gradient(to left, rgba(79, 70, 229, 0.7), rgba(124, 58, 237, 0.4));"></div>
                     </div>
                 </div>
                 
@@ -110,7 +108,6 @@
                 <div class="feature-row" style="display: flex; flex-direction: row;">
                     <div class="feature-image slide-in-left" style="order: 1;">
                         <img src="{% static 'users/images/assessment.png' %}" alt="Performance Analytics Feature" class="feature-img">
-                        <div class="gradient-overlay"></div>
                     </div>
                     <div class="feature-content slide-in-right" style="order: 2;">
                         <div class="feature-icon">
