Privacy policy added

--- a/users/templates/users/landingpage.html
+++ b/users/templates/users/landingpage.html
@@ -216,8 +216,8 @@
                     <a href="#about">About</a>
                     <a href="#features">Features</a>
                     <a href="#testimonials">Testimonials</a>
-                    <a href="#privacy">Privacy</a>
-                    <a href="#terms">Terms</a>
+                    <a href="{% url 'privacy_policy' %}">Privacy Policy</a>
+                    
                 </div>
                 <div class="social-links">
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
